# navex

./: Cargo.toml  IMPLEMENTATION.md  README.md
.github/workflows/: deploy-pages.yml
benches/: steering.rs
demo-wasm/: Cargo.toml
demo-wasm/scripts/: validate-site.sh
demo-wasm/src/: lib.rs
demo-wasm/www/: index.html  main.js
src/: agent.rs  alignment.rs  avoid.rs  cohesion.rs  combine.rs  config.rs  error.rs  float.rs  flock.rs  flow.rs  formation.rs  lib.rs  observer.rs  path.rs  pursue.rs  seek.rs  separation.rs  spatial.rs  steering.rs  vec.rs  wander.rs
